Add license modal and improve bundle handling: Introduced a modal for displaying license information, updated file handling to support skill bundles, and enhanced metadata parsing for better compatibility with legacy files. Improved UI elements for better user experience.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
     </div>
   </div>
 
+  <!-- License (bundle) Modal -->
+  <div id="license-modal" class="modal hidden">
+    <div class="modal-content license-modal-content">
+      <h3>License</h3>
+      <pre id="license-modal-content" class="license-modal-body"></pre>
+      <div class="modal-buttons">
+        <button id="license-modal-close">Close</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Options Modal -->
   <div id="options-modal" class="modal hidden">
     <div class="modal-content">
