Update file paths for CLVerify assets: Changed references in index.html, renderer.js, and package.json to point to the new location of CLVerify resources. Removed obsolete files from the do_not_modify directory, ensuring cleaner project structure and improved asset management.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diamond Soul Downloader</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="do_not_modify/clverify.css">
+  <link rel="stylesheet" href="Skills/clverify-2025-02-09-1/clverify/clverify.css">
 </head>
 <body>
   <div class="app-container">
@@ -155,7 +155,7 @@
     </div>
   </div>
 
-  <script src="do_not_modify/clverify.js"></script>
+  <script src="Skills/clverify-2025-02-09-1/clverify/clverify.js"></script>
   <script src="renderer.js"></script>
 </body>
 </html>
