Add skills folder name input and CLI enhancements: Introduced a new input field in the options modal for specifying the skills folder name. Updated CLI commands to support a non-interactive mode for installations, allowing automatic selection of the oldest entry when multiple exist. Added new commands for packaging skill folders and freezing files, enhancing overall functionality and user experience.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
         </div>
         <p class="options-help">Files activated from the file tree will be copied to this folder as {CID}.MD</p>
       </div>
+      <div class="options-section">
+        <label for="skills-folder-name-input">Skills folder name (local):</label>
+        <input type="text" id="skills-folder-name-input" placeholder="Skills" />
+        <p class="options-help">Folder name used when installing locally (e.g. CLI <code>install</code> without <code>-g</code>). Default: Skills.</p>
+      </div>
       <div class="modal-buttons">
         <button id="options-save">Save</button>
         <button id="options-cancel">Cancel</button>
